--- a/UrchiNet/UrchiNet.fsproj
+++ b/UrchiNet/UrchiNet.fsproj
@@ -35,6 +35,7 @@
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft F#\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
   <Import Project="../.nuget/BuildMagic.targets" />
   <ItemGroup>
+    <Compile Include="prelude.fs" />
     <Compile Include="Xml.fs" />
     <Compile Include="UrchiNet.fs" />
     <None Include="packages.config" />
