--- a/UrchiNet.nuspec
+++ b/UrchiNet.nuspec
@@ -10,6 +10,10 @@
     <description>Urchin API v1 client</description>
     <copyright>Copyright Mauricio Scheffer 2012</copyright>
     <tags>urchin analytics</tags>
+    <dependencies>
+      <dependency id="FSharpx.Core" version="1.8.22" />
+      <dependency id="FSharp.Core.3" version="0.0.2" />
+    </dependencies>
   </metadata>
   <files>
     <file src="UrchiNet\bin\Release\UrchiNet.*" target="lib\net35"/>
