--- a/UrchiNet/packages.config
+++ b/UrchiNet/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FSharp.Core" version="2.0.0" targetFramework="net35" />
+  <package id="FSharpx.Core" version="1.8.22" targetFramework="net35" />
 </packages>
