--- a/UrchiNet.Tests/UrchiNet.Tests.fsproj
+++ b/UrchiNet.Tests/UrchiNet.Tests.fsproj
@@ -49,8 +49,7 @@
       <HintPath>..\packages\FSharpx.Core.1.8.22\lib\40\FSharpx.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Fuchu">
-      <HintPath>..\packages\Fuchu.0.2.0\lib\net40-client\Fuchu.dll</HintPath>
+    <Reference Include="Fuchu, Version=0.2.0.0, Culture=neutral, PublicKeyToken=null">
       <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
